# 13andGene

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/json/: k13-sources.json
sciter/: main.html
sciter/css/: about.css  colors.css  index.css
sciter/html/: about.html
sciter/js/: about.js  adjust-window.js  draw-wheel.js  index.js  k13-sources.js  parse-gedmatch-output.js  predict-ethnicity-percentages.js
src/: main.rs
