[package]
name = "thirteen-and-gene"
version = "0.1.0"
authors = ["GirkovArpa <girkovarpa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "*"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "thirteen-and-gene"
LegalCopyright = "Copyright © Girkov Arpa 2021"
FileDescription = "13&Gene: A fun oracle for Eurogenes K13."
ProductName = "13&Gene"
ProductVersion = "0.1.0"